# mevu_automated_trading

./: .dockerignore  .env.example  Cargo.toml  docker-compose.yml  dockerfile
migrations/: 001_create_crypto_markets.sql  002_create_bot_users.sql
src/: main.rs  mevu_client.rs
src/auth/: service.rs  types.rs
src/bot_config/: service.rs  types.rs
src/chainlink/: service.rs
src/crypto/: cache.rs  clob_websocket.rs  gamma_client.rs  mod.rs  service.rs  ssr_prices.rs  types.rs
src/trading/: engine.rs  executor.rs  mod.rs  types.rs
