[package]
name = "automated_trading"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
futures-util = "0.3"
redis = "1.0.4"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
